log
Thu 16 May 2024 04:36:35 AM UTC: 
 tests:  0|5
total_score: 0/70
bc335f7
Thu 16 May 2024 08:07:30 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:77:20: error: ‘n’ undeclared (first use in this function)
   77 |       if (is_final(n)){
      |                    ^
sudoku.c:77:20: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:75:13: error: unused variable ‘aux’ [-Werror=unused-variable]
   75 |       Node* aux = top(pila);
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
a9e3a1d
Thu 16 May 2024 08:08:04 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8605c4a
Thu 16 May 2024 08:40:17 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
test.c: In function ‘test_dfs’:
test.c:206:19: error: implicit declaration of function ‘DFS’ [-Werror=implicit-function-declaration]
  206 |     Node* final = DFS(initial, &cont);
      |                   ^~~
test.c:206:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:230:11: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  230 |     final = DFS(initial, &cont);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
6a2f24d
Thu 16 May 2024 08:40:38 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|4
total_score: 10/70
06d5808
Thu 16 May 2024 08:45:05 PM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  1|4
total_score: 10/70
b4043a2
Thu 16 May 2024 08:45:21 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
8ffd060
Thu 16 May 2024 08:45:30 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
bc614a0
Thu 16 May 2024 08:46:43 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
0fa643f
Sat 18 May 2024 04:37:24 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:74:22: error: unused variable ‘j’ [-Werror=unused-variable]
   74 |             for (int j = 0; k < 9; k++){
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
cefd138
Sat 18 May 2024 04:41:05 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:74:22: error: unused variable ‘j’ [-Werror=unused-variable]
   74 |             for (int j = 0; k <= 9; k++){
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
9869a9d
Sat 18 May 2024 04:41:14 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dfda17e
Sat 18 May 2024 04:41:25 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5789152
Sat 18 May 2024 04:41:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f58d255
Sat 18 May 2024 04:42:17 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d2d8a74
Sat 18 May 2024 04:42:53 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
d0cdfec
Sat 18 May 2024 06:12:18 PM UTC: 
 sudoku.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c:104:7: error: redefinition of ‘DFS’
  104 | Node* DFS(Node* initial, int* cont){
      |       ^~~
sudoku.c:99:7: note: previous definition of ‘DFS’ with type ‘Node *(Node *, int *)’
   99 | Node* DFS(Node* initial, int* cont){
      |       ^~~
Compilation failed
426dd74
Sat 18 May 2024 06:12:41 PM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  7|2
total_score: 50/70
e6d83ce
Sat 18 May 2024 06:18:37 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
29387a8
Sat 18 May 2024 06:19:31 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  7|2
total_score: 50/70
b4aac9e
Sat 18 May 2024 06:20:28 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
3296cdd
Sat 18 May 2024 06:23:36 PM UTC: 
 sudoku.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
 tests:  7|2
total_score: 50/70
4569684
Sat 18 May 2024 06:24:17 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:124:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  124 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
1f1f48c
